# POiSM-face-detection

./: CMakeLists.txt  FaceRecognition.sublime-workspace
res/: resources.qrc  styles.qss
src/: declarations.h  director.cpp  director.h  facedetector.cpp  facedetector.h  facedetectorconfig.cpp  facedetectorconfig.h  faceinfo.cpp  faceinfo.h  imagepreviewwidget.cpp  imagepreviewwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
